# basicweb-rust-experiments

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  default.nix  docker.nix  package-lock.json  rollup.config.js
app/: .gitignore  default.nix  docker.nix
app-biz/: default.nix  docker.nix
app-biz/client/: package-lock.json  rollup.config.js
app-biz/src/: schema.rs
app-gallery/: README.md  default.nix
app-gallery/client/: README.md  package-lock.json  rollup.config.js
app-gallery/src/: db.rs  schema.rs
app-tasks/: README.md  docker.nix
app-tasks/client/: README.md  package.json  rollup.config.js
app-tasks/src/: lib.rs  schema.rs
app/src/: main.rs
basic/src/: lib.rs
board/: .gitignore  Cargo.toml
board/client/: README.md  rollup.config.js
board/examples/: basic.rs
board/src/: db.rs  lib.rs
catalog/: Cargo.toml
catalog/client/: package-lock.json  package.json  rollup.config.js
catalog/src/: schema.rs
client/: README.md  package-lock.json  package.json  rollup.config.js
client/src/: AlertConfirm.html  Gallery.html  GalleryCreate.html  Handle.html  Leaflet.html  MapListing.html  MapSearch.html  Modal.html  NominatimSearch.html  PostMarkdown.html  PostThread.html  Profile.html  Stripe.html  Tags.html  Unique.html  UserGallery.html  UserGalleryCreate.html  UserGalleryItemList.html  UserGalleryList.html  UserItemForm.html  UserItemList.html  UserPost.html  UserPostList.html  main.js
events/client/: rollup.config.js
events/src/: schema.rs
examples/: basic.rs
galleries/: .gitignore
galleries/client/: package.json  rollup.config.js
galleries/src/: lib.rs
locations/client/: README.md  package-lock.json  package.json
migrations/2020-08-11-063445_create_users/: up.sql
migrations/2020-08-13-224709_create_gallery/: down.sql  up.sql
migrations/2020-08-14-230134_create_locations/: down.sql
migrations/2020-08-16-080144_create_posts/: up.sql
migrations/2020-08-18-044441_create_catalog/: down.sql
migrations/2020-08-18-071949_create_tags/: up.sql
min/: .gitignore  Cargo.toml  README.md
min/examples/: basic.rs
src/: HelloWorld.html  lib.rs  main.js  main.rs  models.rs  schema.rs
src/actions/: item.rs  (+15 more)
tags/: Cargo.toml
users/: .gitignore  Cargo.toml  README.md
(+232 files in other folders)
