[package]
name = "base"
version = "0.1.0"
authors = ["M. Bellaire <22552422+mephistopheles-8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

bytes = "0.5"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

lettre = "0.9"
lettre_email = "0.9"

rust-argon2 = "0.8"
# bcrypt = "0.8"
