[package]
name = "basic"
version = "0.1.0"
authors = ["M. Bellaire <22552422+mephistopheles-8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"

chrono = { version = "0.4.13", features = ["serde"] }
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "chrono"] }
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

handlebars = { version = "3.0.0", features = ["dir_source"] }

[dev-dependencies]
actix-rt = "1.0"
actix-files = "0.2.1"
actix-http = "1.0.1"
dotenv = "0.15"
env_logger = "0.7"
